add task popup animation

--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -134,7 +134,7 @@ body {
 }
 
 .show {
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) !important;
     transition: transform 750ms ease-in-out;
     /* hinzugefügt */
 }
