--- a/css/globalAddTask.css
+++ b/css/globalAddTask.css
@@ -23,7 +23,7 @@ textarea {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(300%, -50%);
     max-height: 90vh;
     height: fit-content;
     width: 80vw;
@@ -34,6 +34,7 @@ textarea {
     display: flex;
     padding: 64px 0;
     box-sizing: border-box;
+    transition: transform 750ms ease-in-out;
 }
 
 .addTaskLR {
