animate every popup

--- a/css/contact.css
+++ b/css/contact.css
@@ -276,11 +276,12 @@ h1 {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(300%, -50%);
     border-radius: 16px;
     z-index: 800;
     display: flex;
     min-width: 800px;
+    transition: transform 750ms ease-in-out;
 }
 
 .closeAddContact {
