--- a/css/summary.css
+++ b/css/summary.css
@@ -147,7 +147,7 @@ h1 {
 #greeting {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     padding: 30px;
 }
 
