--- a/css/summary.css
+++ b/css/summary.css
@@ -38,6 +38,7 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: center;
+    gap: 3%;
 }
 
 .tasks {
@@ -159,6 +160,7 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     padding: 30px;
+    gap: 30px;
 }
 
 #greetingContainer {
